--- a/infra/kubernetes/Makefile
+++ b/infra/kubernetes/Makefile
@@ -11,7 +11,7 @@ get-external-ip:
 #############################
 # Setup
 #############################
-.PHONY: generate-parivate-key generate-deployment
+.PHONY: generate-parivate-key generate-manifest
 
 generate-private-key:
 	openssl req -x509 -nodes \
@@ -19,8 +19,10 @@ generate-private-key:
 		-keyout privkey.pem -out cert.pem \
 		-subj "/CN=${EXTERNAL_IP}"
 
-generate-deployment:
+generate-manifest:
 	cd ./${ENV}; sed 's/<PROJECT-ID>/${GCP_STORAGE_BUCKET_NAME}/' default/deployment-user-api.yaml.temp > default/deployment-user-api.yaml
+	cd ./${ENV}; sed 's/<PROJECT-ID>/${GCP_STORAGE_BUCKET_NAME}/' default/deployment-calc-api.yaml.temp > default/deployment-calc-api.yaml
+	cd ./${ENV}; sed 's/<PROJECT-ID>/${GCP_STORAGE_BUCKET_NAME}/' default/cronjob-batch.yaml.temp > default/cronjob-batch.yaml
 
 #############################
 # Update
