--- a/native/android/app/src/main/AndroidManifest.xml
+++ b/native/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     </activity>
     <meta-data
       android:name="com.facebook.sdk.ApplicationId"
-      android:value="@string/facebook_app_id" />
+      android:value="@string/FACEBOOK_APP_ID" />
     <meta-data
       android:name="firebase_performance_logcat_enabled"
       android:value="true" />
@@ -44,7 +44,7 @@
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
 
-        <data android:scheme="@string/fb_login_protocol_scheme" />
+        <data android:scheme="@string/FACEBOOK_LOGIN_PROTOCOL_SCHEME" />
       </intent-filter>
     </activity>
     <activity
