--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -26,32 +26,32 @@ android {
     if (project.rootProject.file('local.properties').exists()) {
       Properties properties = new Properties()
       properties.load(project.rootProject.file('local.properties').newDataInputStream())
-      def AD_KEY = properties.getProperty('ad_key')
-      def BASE_URL = properties.getProperty('base_url')
-      def TWITTER_CONSUMER_KEY = properties.getProperty('twitter_consumer_key')
-      def TWITTER_CONSUMER_SECRET = properties.getProperty('twitter_consumer_secret')
-      def FACEBOOK_APP_ID = properties.getProperty('facebook_app_id')
-      def FACEBOOK_LOGIN_PROTOCOL_SCHEME = properties.getProperty('facebook_login_protocol_scheme')
-      resValue("string", "AD_KEY", "\"${AD_KEY}\"")
-      resValue("string", "BASE_URL","\"${BASE_URL}\"")
-      resValue("string", "TWITTER_CONSUMER_KEY","\"${TWITTER_CONSUMER_KEY}\"")
-      resValue("string","TWITTER_CONSUMER_SECRET","\"${TWITTER_CONSUMER_SECRET}\"")
-      resValue("string", "FACEBOOK_APP_ID","\"${FACEBOOK_APP_ID}\"")
-      resValue("string", "FACEBOOK_LOGIN_PROTOCOL_SCHEME","\"${FACEBOOK_LOGIN_PROTOCOL_SCHEME}\"")
+      def AD_KEY = properties.getProperty("ad_key")
+      def BASE_URL = properties.getProperty("base_url")
+      def TWITTER_CONSUMER_KEY = properties.getProperty("twitter_consumer_key")
+      def TWITTER_CONSUMER_SECRET = properties.getProperty("twitter_consumer_secret")
+      def FACEBOOK_APP_ID = properties.getProperty("facebook_app_id")
+      def FACEBOOK_LOGIN_PROTOCOL_SCHEME = properties.getProperty("facebook_login_protocol_scheme")
+      buildConfigField("String", "AD_KEY", "\"${AD_KEY}\"")
+      buildConfigField("String", "BASE_URL","\"${BASE_URL}\"")
+      resValue("string", "TWITTER_CONSUMER_KEY","${TWITTER_CONSUMER_KEY}")
+      resValue("string","TWITTER_CONSUMER_SECRET","${TWITTER_CONSUMER_SECRET}")
+      resValue("string", "FACEBOOK_APP_ID","${FACEBOOK_APP_ID}")
+      resValue("string", "FACEBOOK_LOGIN_PROTOCOL_SCHEME","${FACEBOOK_LOGIN_PROTOCOL_SCHEME}")
 
     } else{
-      def AD_KEY = "ad_key"
-      def BASE_URL = properties.getProperty('base_url')
-      def TWITTER_CONSUMER_KEY = properties.getProperty('twitter_consumer_key')
-      def TWITTER_CONSUMER_SECRET = properties.getProperty('twitter_consumer_secret')
-      def FACEBOOK_APP_ID = properties.getProperty('facebook_app_id')
-      def FACEBOOK_LOGIN_PROTOCOL_SCHEME = properties.getProperty('facebook_login_protocol_scheme')
-      resValue("string", "AD_KEY", "\"${AD_KEY}\"")
-      resValue("string", "BASE_URL","\"${BASE_URL}\"")
-      resValue("string", "TWITTER_CONSUMER_KEY","\"${TWITTER_CONSUMER_KEY}\"")
-      resValue("string","TWITTER_CONSUMER_SECRET","\"${TWITTER_CONSUMER_SECRET}\"")
-      resValue("string", "FACEBOOK_APP_ID","\"${FACEBOOK_APP_ID}\"")
-      resValue("string", "FACEBOOK_LOGIN_PROTOCOL_SCHEME","\"${FACEBOOK_LOGIN_PROTOCOL_SCHEME}\"")
+      def AD_KEY = properties.getProperty("ad_key")
+      def BASE_URL = properties.getProperty("base_url")
+      def TWITTER_CONSUMER_KEY = properties.getProperty("twitter_consumer_key")
+      def TWITTER_CONSUMER_SECRET = properties.getProperty("twitter_consumer_secret")
+      def FACEBOOK_APP_ID = properties.getProperty("facebook_app_id")
+      def FACEBOOK_LOGIN_PROTOCOL_SCHEME = properties.getProperty("facebook_login_protocol_scheme")
+      buildConfigField("String", "AD_KEY", "\"${AD_KEY}\"")
+      buildConfigField("String", "BASE_URL","\"${BASE_URL}\"")
+      resValue("string", "TWITTER_CONSUMER_KEY","${TWITTER_CONSUMER_KEY}")
+      resValue("string","TWITTER_CONSUMER_SECRET","${TWITTER_CONSUMER_SECRET}")
+      resValue("string", "FACEBOOK_APP_ID","${FACEBOOK_APP_ID}")
+      resValue("string", "FACEBOOK_LOGIN_PROTOCOL_SCHEME","${FACEBOOK_LOGIN_PROTOCOL_SCHEME}")
     }
   }
 
